--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,58 +1,36 @@
-.header {
-    display: inline-flex;
-    flex-wrap: wrap;
-    min-width: auto;
-    background-color: blueviolet;
-  }
+.container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+}
 
-  .container {
-    display: flex;
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-  }
-  
-  .header-navbar {
-    display: flex;
-    justify-content: space-between;
-    align-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
-  }
+.list__container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 
-  .header-navbar a {
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 700;
-  }
-  
-  .header-navbar a:hover {
-    text-decoration: underline;
-    color: rgb(53, 53, 53);
-  }
-  
-  .navbar-brand {
-    width: 100%;
-    max-width: 20%;
-    align-self: center;
-    text-align: center;
-  }
-  
-  .brand-icon {
-    width: 32px;
-    height: 32px;
-  }
+.list__container a {
+  display: block;
+  margin: 0 10px;
+  padding: 7px 10px;
+  min-width: 70px;
+  border: 2px solid transparent;
+  border-radius: 3px;
+  color: blue;
+  text-align: center;
+  font-family: sans-serif;
+  text-decoration: none;
+  font-weight: 600;
+  text-shadow: 0 0 2px #fff, 0 0 40px blue;
+  transition: .4s;
+  cursor: pointer;
+}
 
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .content {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 10px;
-    align-items: center;
-    width: 100%;
-  }
+.list__container :global(a.active) {
+  border: 2px solid blue;
+  color: blue;
+  text-shadow: none;
+}
