--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -1,46 +1,11 @@
-* {
-  font-family: 'Roboto';
-}
-
-body {
-  font-family: 'Roboto Slab', serif;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
 .wrapper {
-  display: flex;
-  min-height: 100%;
-  overflow: hidden;
-  flex-direction: column;
-}
-.main {
-  display: flex;
-  flex-flow: row nowrap;
-  flex-basis: auto auto 50%;
-  justify-content: flex-start;
-  width: 100%;
-  max-width: 1140px;
+  max-width: 900px;
   margin: 0 auto;
-  padding: 25px;
+  padding: 35px 0;
+}
+
+@media screen and (max-width: 900px) {
+  .wrapper {
+    padding: 15px 5px;
+  }
 }
