--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,16 @@
-@import-normalize;
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Raleway:wght@100&family=Rubik+Mono+One&display=swap');
+
+body {
+  font-family: 'Rubik Mono One', sans-serif;
+  font-size: 16px;
+  background-color: #fff;
+  background-image: url(@static/bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-attachment: fixed;
+}
+
+img {
+  display: block;
+}
