--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Raleway:wght@100&family=Rubik+Mono+One&display=swap');
 
 body {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: 'Kosugi Maru', sans-serif;
   font-size: 16px;
   background-color: #fff;
   background-image: url(@static/bg.jpg);
@@ -9,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-position: top left;
   background-attachment: fixed;
+  height: 100vw;
 }
 
 img {
